flutter_sfu_relay/windows/librelay.h

// SourceSwitcherInjectSFU 注入来自 SFU 的 RTP 包
// isVideo: 1 = video, 0 = audio
// data: RTP 原始数据
// dataLen: 数据长度
//
extern __declspec(dllexport) int SourceSwitcherInjectSFU(char* roomID, int isVideo, void* data, int dataLen);
// SourceSwitcherInjectLocal 注入来自本地分享者的 RTP 包
//
extern __declspec(dllexport) int SourceSwitcherInjectLocal(char* roomID, int isVideo, void* data, int dataLen);
// SourceSwitcherStartLocalShare 开始本地分享
//
extern __declspec(dllexport) int SourceSwitcherStartLocalShare(char* roomID, char* sharerID);
// SourceSwitcherStopLocalShare 停止本地分享
//
extern __declspec(dllexport) int SourceSwitcherStopLocalShare(char* roomID);
// SourceSwitcherGetStatus 获取源切换器状态
//
extern __declspec(dllexport) char* SourceSwitcherGetStatus(char* roomID);
// SourceSwitcherIsLocalSharing 检查是否正在本地分享
//
extern __declspec(dllexport) int SourceSwitcherIsLocalSharing(char* roomID);
// ElectionUpdateDeviceInfo 更新设备信息
// deviceType: 0=Unknown, 1=PC, 2=Pad, 3=Mobile, 4=TV
// connectionType: 0=Unknown, 1=Ethernet, 2=WiFi, 3=Cellular
// powerState: 0=Unknown, 1=PluggedIn, 2=Battery, 3=LowBattery
//
extern __declspec(dllexport) int ElectionUpdateDeviceInfo(int64_t relayID, char* roomID, char* peerID, int deviceType, int connectionType, int powerState);
// ElectionUpdateNetworkMetrics 更新网络指标
//
extern __declspec(dllexport) int ElectionUpdateNetworkMetrics(int64_t relayID, char* roomID, char* peerID, int64_t bandwidth, int64_t latency, double packetLoss);
// ElectionGetCandidates 获取所有候选者列表
//
extern __declspec(dllexport) char* ElectionGetCandidates(int64_t relayID, char* roomID);
// ProxyModeInit 初始化代理模式（创建 SourceSwitcher + 启用选举）
//
extern __declspec(dllexport) int ProxyModeInit(int64_t relayID, char* roomID);
// ProxyModeCleanup 清理代理模式
//
extern __declspec(dllexport) int ProxyModeCleanup(int64_t relayID, char* roomID);
// ProxyModeGetStatus 获取代理模式综合状态
//
extern __declspec(dllexport) char* ProxyModeGetStatus(int64_t relayID, char* roomID);
// FailoverEnable 启用自动故障切换
// localPeerID: 本机 Peer ID
//
extern __declspec(dllexport) int FailoverEnable(char* roomID, char* localPeerID);
// FailoverDisable 禁用自动故障切换
//
extern __declspec(dllexport) int FailoverDisable(char* roomID);
// FailoverSetCurrentRelay 设置当前 Relay
//
extern __declspec(dllexport) int FailoverSetCurrentRelay(char* roomID, char* relayID, uint64_t epoch);
// FailoverUpdateLocalScore 更新本机分数
//
extern __declspec(dllexport) int FailoverUpdateLocalScore(char* roomID, double score);
// FailoverReceiveClaim 接收其他节点的 Relay 声明
// epoch: 选举纪元号
// score: 声明者的分数（用于同 epoch 冲突解决）
//
extern __declspec(dllexport) int FailoverReceiveClaim(char* roomID, char* peerID, uint64_t epoch, double score);
// FailoverGetState 获取故障切换状态
//
extern __declspec(dllexport) char* FailoverGetState(char* roomID);
// CoordinatorEnable 一键启用自动代理模式
// 自动管理：心跳、选举、故障切换、Relay 接管
// 用户无需关心内部细节，完全自动
//
extern __declspec(dllexport) int CoordinatorEnable(char* roomID, char* localPeerID);
// CoordinatorDisable 禁用自动代理模式
//
extern __declspec(dllexport) int CoordinatorDisable(char* roomID);