flutter_sfu_relay/lib/flutter_sfu_relay_bindings_generated.dart


  late final _SourceSwitcherInjectSFUPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Int,
          )
        >
      >('SourceSwitcherInjectSFU');
  late final _SourceSwitcherInjectSFU =
      _SourceSwitcherInjectSFUPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>, int)
      >();

  /// SourceSwitcherInjectLocal 注入来自本地分享者的 RTP 包
  int SourceSwitcherInjectLocal(
    ffi.Pointer<ffi.Char> roomID,
    int isVideo,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _SourceSwitcherInjectLocal(roomID, isVideo, data, dataLen);
  }

  late final _SourceSwitcherInjectLocalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Int,
          )
        >
      >('SourceSwitcherInjectLocal');
  late final _SourceSwitcherInjectLocal =
      _SourceSwitcherInjectLocalPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>, int)
      >();

  /// SourceSwitcherStartLocalShare 开始本地分享
  int SourceSwitcherStartLocalShare(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> sharerID,
  ) {
    return _SourceSwitcherStartLocalShare(roomID, sharerID);
  }

  late final _SourceSwitcherStartLocalSharePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('SourceSwitcherStartLocalShare');
  late final _SourceSwitcherStartLocalShare =
      _SourceSwitcherStartLocalSharePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// SourceSwitcherStopLocalShare 停止本地分享
  int SourceSwitcherStopLocalShare(ffi.Pointer<ffi.Char> roomID) {
    return _SourceSwitcherStopLocalShare(roomID);
  }

  late final _SourceSwitcherStopLocalSharePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'SourceSwitcherStopLocalShare',
      );
  late final _SourceSwitcherStopLocalShare =
      _SourceSwitcherStopLocalSharePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// SourceSwitcherGetStatus 获取源切换器状态
  ffi.Pointer<ffi.Char> SourceSwitcherGetStatus(ffi.Pointer<ffi.Char> roomID) {
    return _SourceSwitcherGetStatus(roomID);
  }

  late final _SourceSwitcherGetStatusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('SourceSwitcherGetStatus');
  late final _SourceSwitcherGetStatus =
      _SourceSwitcherGetStatusPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// SourceSwitcherIsLocalSharing 检查是否正在本地分享
  int SourceSwitcherIsLocalSharing(ffi.Pointer<ffi.Char> roomID) {
    return _SourceSwitcherIsLocalSharing(roomID);
  }

  late final _SourceSwitcherIsLocalSharingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'SourceSwitcherIsLocalSharing',
      );
  late final _SourceSwitcherIsLocalSharing =
      _SourceSwitcherIsLocalSharingPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// ElectionUpdateDeviceInfo 更新设备信息
  /// deviceType: 0=Unknown, 1=PC, 2=Pad, 3=Mobile, 4=TV
  /// connectionType: 0=Unknown, 1=Ethernet, 2=WiFi, 3=Cellular
  /// powerState: 0=Unknown, 1=PluggedIn, 2=Battery, 3=LowBattery
  int ElectionUpdateDeviceInfo(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int deviceType,
    int connectionType,
    int powerState,
  ) {
    return _ElectionUpdateDeviceInfo(
      relayID,
      roomID,
      peerID,
      deviceType,
      connectionType,
      powerState,
    );
  }

  late final _ElectionUpdateDeviceInfoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Int64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('ElectionUpdateDeviceInfo');
  late final _ElectionUpdateDeviceInfo =
      _ElectionUpdateDeviceInfoPtr.asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  /// ElectionUpdateNetworkMetrics 更新网络指标
  int ElectionUpdateNetworkMetrics(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int bandwidth,
    int latency,
    double packetLoss,
  ) {
    return _ElectionUpdateNetworkMetrics(
      relayID,
      roomID,
      peerID,
      bandwidth,
      latency,
      packetLoss,
    );
  }

  late final _ElectionUpdateNetworkMetricsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Int64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int64,
            ffi.Double,
          )
        >
      >('ElectionUpdateNetworkMetrics');
  late final _ElectionUpdateNetworkMetrics =
      _ElectionUpdateNetworkMetricsPtr.asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          double,
        )
      >();

  /// ElectionGetCandidates 获取所有候选者列表
  ffi.Pointer<ffi.Char> ElectionGetCandidates(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
  ) {
    return _ElectionGetCandidates(relayID, roomID);
  }

  late final _ElectionGetCandidatesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
        >
      >('ElectionGetCandidates');
  late final _ElectionGetCandidates =
      _ElectionGetCandidatesPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>)
      >();

  /// ProxyModeInit 初始化代理模式（创建 SourceSwitcher + 启用选举）
  int ProxyModeInit(int relayID, ffi.Pointer<ffi.Char> roomID) {
    return _ProxyModeInit(relayID, roomID);
  }

  late final _ProxyModeInitPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Char>)>
      >('ProxyModeInit');
  late final _ProxyModeInit =
      _ProxyModeInitPtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// ProxyModeCleanup 清理代理模式
  int ProxyModeCleanup(int relayID, ffi.Pointer<ffi.Char> roomID) {
    return _ProxyModeCleanup(relayID, roomID);
  }

  late final _ProxyModeCleanupPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Char>)>
      >('ProxyModeCleanup');
  late final _ProxyModeCleanup =
      _ProxyModeCleanupPtr.asFunction<
        int Function(int, ffi.Pointer<ffi.Char>)
      >();

  /// ProxyModeGetStatus 获取代理模式综合状态
  ffi.Pointer<ffi.Char> ProxyModeGetStatus(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
  ) {
    return _ProxyModeGetStatus(relayID, roomID);
  }

  late final _ProxyModeGetStatusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
        >
      >('ProxyModeGetStatus');
  late final _ProxyModeGetStatus =
      _ProxyModeGetStatusPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>)
      >();

  /// FailoverEnable 启用自动故障切换
  /// localPeerID: 本机 Peer ID
  int FailoverEnable(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> localPeerID,
  ) {
    return _FailoverEnable(roomID, localPeerID);
  }

  late final _FailoverEnablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('FailoverEnable');
  late final _FailoverEnable =
      _FailoverEnablePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// FailoverDisable 禁用自动故障切换
  int FailoverDisable(ffi.Pointer<ffi.Char> roomID) {
    return _FailoverDisable(roomID);
  }

  late final _FailoverDisablePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'FailoverDisable',
      );
  late final _FailoverDisable =
      _FailoverDisablePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// FailoverSetCurrentRelay 设置当前 Relay
  int FailoverSetCurrentRelay(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> relayID,
    int epoch,
  ) {
    return _FailoverSetCurrentRelay(roomID, relayID, epoch);
  }

  late final _FailoverSetCurrentRelayPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('FailoverSetCurrentRelay');
  late final _FailoverSetCurrentRelay =
      _FailoverSetCurrentRelayPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  /// FailoverUpdateLocalScore 更新本机分数
  int FailoverUpdateLocalScore(ffi.Pointer<ffi.Char> roomID, double score) {
    return _FailoverUpdateLocalScore(roomID, score);
  }

  late final _FailoverUpdateLocalScorePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Double)>
      >('FailoverUpdateLocalScore');
  late final _FailoverUpdateLocalScore =
      _FailoverUpdateLocalScorePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, double)
      >();

  /// FailoverReceiveClaim 接收其他节点的 Relay 声明
  /// epoch: 选举纪元号
  /// score: 声明者的分数（用于同 epoch 冲突解决）
  int FailoverReceiveClaim(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int epoch,
    double score,
  ) {
    return _FailoverReceiveClaim(roomID, peerID, epoch, score);
  }

  late final _FailoverReceiveClaimPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Double,
          )
        >
      >('FailoverReceiveClaim');
  late final _FailoverReceiveClaim =
      _FailoverReceiveClaimPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, double)
      >();

  /// FailoverGetState 获取故障切换状态
  ffi.Pointer<ffi.Char> FailoverGetState(ffi.Pointer<ffi.Char> roomID) {
    return _FailoverGetState(roomID);
  }

  late final _FailoverGetStatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('FailoverGetState');
  late final _FailoverGetState =
      _FailoverGetStatePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorEnable 一键启用自动代理模式
  /// 自动管理：心跳、选举、故障切换、Relay 接管
  /// 用户无需关心内部细节，完全自动
  int CoordinatorEnable(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> localPeerID,
  ) {
    return _CoordinatorEnable(roomID, localPeerID);
  }

  late final _CoordinatorEnablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('CoordinatorEnable');
  late final _CoordinatorEnable =
      _CoordinatorEnablePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorDisable 禁用自动代理模式
  int CoordinatorDisable(ffi.Pointer<ffi.Char> roomID) {
    return _CoordinatorDisable(roomID);
  }

  late final _CoordinatorDisablePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'CoordinatorDisable',
      );
  late final _CoordinatorDisable =
      _CoordinatorDisablePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();
